Replaced deprecated URL constructors